--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
 <body>
     <h1>Our Social Service Activities</h1>
     <div class="gallery">
-        <img src="photo1.jpg" alt="Social Service 1">
-        <img src="photo2.jpg" alt="Social Service 2">
-        <img src="photo3.jpg" alt="Social Service 3">
-        <img src="photo4.jpg" alt="Social Service 4">
-        <img src="photo5.jpg" alt="Social Service 5">
-        <img src="photo6.jpg" alt="Social Service 6">
+        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (1).jpeg">
+        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (2).jpeg">
+        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (3).jpeg">
+        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (4).jpeg">
+        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (5).jpeg">
+        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (6).jpeg">
     </div>
 </body>
 </html>
+
