--- a/index.html
+++ b/index.html
@@ -1,49 +1,142 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Social Service Gallery</title>
-    <style>
-        body {
-            font-family: Arial;
-            background-color: #f9f9f9;
-            text-align: center;
-        }
-        h1 {
-            color: #333;
-            margin-top: 20px;
-        }
-        .gallery {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 30px;
-        }
-        .gallery img {
-            width: 300px;
-            height: 200px;
-            object-fit: cover;
-            margin: 10px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
-        }
-        .gallery img:hover {
-            transform: scale(1.05);
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Social Services</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f8fff8;
+      color: #333;
+    }
+    header {
+      background-color: #4CAF50;
+      color: white;
+      text-align: center;
+      padding: 1.5rem 0;
+      font-size: 2rem;
+      font-weight: bold;
+    }
+    nav {
+      background: #e8f5e9;
+      text-align: center;
+      padding: 0.8rem 0;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #2e7d32;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    h2 {
+      color: #2e7d32;
+      text-align: center;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .photo-card {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+    .photo-card:hover {
+      transform: scale(1.03);
+    }
+    .photo-card img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+    .caption {
+      padding: 15px;
+      font-size: 15px;
+      line-height: 1.5;
+      text-align: justify;
+    }
+    footer {
+      text-align: center;
+      background: #4CAF50;
+      color: white;
+      padding: 15px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Our Social Service Activities</h1>
+  <header>Social Services</header>  <nav>
+    <a href="#about">About</a>
+    <a href="#work">Our Work</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#contact">Contact</a>
+  </nav>  <section id="about">
+    <h2>About Us</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">
+      We are dedicated to helping those in need through compassion, care, and community service. Our mission is to create positive change by feeding the hungry, supporting the elderly, and spreading kindness. Together, we strive to make our society more inclusive and humane.
+    </p>
+  </section>  <section id="work">
+    <h2>Our Work</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">
+      Our volunteers serve food, share love, and bring smiles to the faces of the less fortunate. Every visit, every act of service, and every shared meal is a step towards a better world.
+    </p>
+  </section>  <section id="gallery">
+    <h2>Gallery</h2>
     <div class="gallery">
-        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (1).jpeg">
-        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (2).jpeg">
-        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (3).jpeg">
-        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (4).jpeg">
-        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (5).jpeg">
-        <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (6).jpeg">
+      <div class="photo-card">
+        <img src="images/photo1.jpg" alt="Feeding the Elderly">
+        <div class="caption">
+          <p>Serving warm meals to those who need it most.</p>
+          <p>Our volunteers listen, share, and care with empathy.</p>
+          <p>Every plate served carries love and dignity.</p>
+          <p>We believe no one should go to bed hungry.</p>
+          <p>Together, we create moments of hope and humanity.</p>
+        </div>
+      </div><div class="photo-card">
+    <img src="images/photo2.jpg" alt="Community Feeding Program">
+    <div class="caption">
+      <p>Bringing together youth to serve the community.</p>
+      <p>Every meal shared becomes a memory of kindness.</p>
+      <p>We unite people through compassion and care.</p>
+      <p>Acts of giving remind us of our shared humanity.</p>
+      <p>Service is not a duty—it’s a privilege to uplift others.</p>
     </div>
+  </div>
+
+  <div class="photo-card">
+    <img src="images/photo3.jpg" alt="Helping Hands Initiative">
+    <div class="caption">
+      <p>Extending hands to support the poor and the elderly.</p>
+      <p>Food is more than nourishment—it’s comfort and connection.</p>
+      <p>We reach out with humility, respect, and love.</p>
+      <p>Each visit strengthens bonds in our community.</p>
+      <p>Together, we spread warmth, one meal at a time.</p>
+    </div>
+  </div>
+</div>
+
+  </section>  <section id="contact">
+    <h2>Contact Us</h2>
+    <p style="text-align:center; max-width:700px; margin:auto;">
+      Interested in joining our mission? Reach out to us for collaboration or volunteering opportunities.<br><br>
+      📧 Email: <a href="mailto:bhavanpbbhavanpb@gmail.com">bhavanpbbhavanpb@gmail.com</a><br>
+      🌐 Website: <a href="https://bhavanpbbhavanpb-art.github.io/social-services-website/">Social Services</a>
+    </p>
+  </section>  <footer>
+    © 2025 Social Services | Made with ❤️ for humanity
+  </footer>
 </body>
 </html>
-
-
