--- a/social-services-index.html
+++ b/social-services-index.html
@@ -168,9 +168,9 @@
         <h2 style="margin-top:8px">Gallery</h2>
         <div class="gallery" style="margin-top:12px">
           <!-- Replace these with your actual images or add more -->
-          <img src="images/photo6.jpg" alt="gallery1" />
-          <img src="images/photo7.jpg" alt="gallery2" />
-          <img src="images/photo8.jpg" alt="gallery3" />
+          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (1).jpeg" />
+          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (2).jpeg" />
+          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (3).jpeg" />
           <img src="images/photo9.jpg" alt="gallery4" />
           <img src="images/photo10.jpg" alt="gallery5" />
           <img src="images/photo11.jpg" alt="gallery6" />
