--- a/social-services-index.html
+++ b/social-services-index.html
@@ -116,7 +116,7 @@
 
         <div>
           <!-- Banner image — replace src with your existing hero photo -->
-          <img src="images/photo1.jpg" alt="Community" style="width:100%;border-radius:12px;box-shadow:0 12px 36px rgba(15,23,42,0.08);object-fit:cover;height:320px">
+          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (1).jpeg"Community" style="width:100%;border-radius:12px;box-shadow:0 12px 36px rgba(15,23,42,0.08);object-fit:cover;height:320px">
         </div>
       </section>
 
@@ -131,7 +131,7 @@
         <h2 style="margin-top:22px">Our Work</h2>
         <div class="grid">
           <article class="card">
-            <img src="images/photo2.jpg" alt="Education" />
+            <WhatsApp Image 2025-11-03 at 7.46.22 PM (2).jpeg" alt="Education" />
             <div class="content">
               <h3>Education Support</h3>
               <p>Books, tuition help and school kits for children in need.</p>
@@ -139,7 +139,7 @@
           </article>
 
           <article class="card">
-            <img src="images/photo3.jpg" alt="Health" />
+            <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (3).jpeg" alt="Health" />
             <div class="content">
               <h3>Health Camps</h3>
               <p>Basic medical checkups and health awareness drives for families.</p>
@@ -171,9 +171,6 @@
           <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (1).jpeg" />
           <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (2).jpeg" />
           <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (3).jpeg" />
-          <img src="images/photo9.jpg" alt="gallery4" />
-          <img src="images/photo10.jpg" alt="gallery5" />
-          <img src="images/photo11.jpg" alt="gallery6" />
         </div>
       </section>
 
