--- a/s-index.html
+++ b/s-index.html
@@ -116,7 +116,7 @@
 
         <div>
           <!-- Banner image — replace src with your existing hero photo -->
-          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (1).jpeg"Community" style="width:100%;border-radius:12px;box-shadow:0 12px 36px rgba(15,23,42,0.08);object-fit:cover;height:320px">
+          <img src="photo1.jpg"Community" style="width:100%;border-radius:12px;box-shadow:0 12px 36px rgba(15,23,42,0.08);object-fit:cover;height:320px">
         </div>
       </section>
 
@@ -131,7 +131,7 @@
         <h2 style="margin-top:22px">Our Work</h2>
         <div class="grid">
           <article class="card">
-            <WhatsApp Image 2025-11-03 at 7.46.22 PM (2).jpeg" alt="Education" />
+            <"photo2.jpg" alt="Education" />
             <div class="content">
               <h3>Education Support</h3>
               <p>Books, tuition help and school kits for children in need.</p>
@@ -139,7 +139,7 @@
           </article>
 
           <article class="card">
-            <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (3).jpeg" alt="Health" />
+            <img src="photo3.jpg" alt="Health" />
             <div class="content">
               <h3>Health Camps</h3>
               <p>Basic medical checkups and health awareness drives for families.</p>
@@ -154,9 +154,9 @@
         <h2 style="margin-top:8px">Gallery</h2>
         <div class="gallery" style="margin-top:12px">
           <!-- Replace these with your actual images or add more -->
-          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (1).jpeg" />
-          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (2).jpeg" />
-          <img src="WhatsApp Image 2025-11-03 at 7.46.22 PM (3).jpeg" />
+          <img src="photo1.jpg" />
+          <img src="photo2  .jpg" />
+          <img src="photo3.jpg" />
         </div>
       </section>
 
